# llava-q

./: .gitignore  README.md  pyproject.toml
configs/: qwen05b_clip.yaml  qwen15b_clip.yaml
docs/: llava-v1-training-pipeline.md
docs/superpowers/plans/: 2026-06-06-llava-mini-lab.md
docs/superpowers/specs/: 2026-06-06-llava-mini-lab-design.md
scripts/: __init__.py  prepare_toy_data.py  run_overfit.sh
src/llava_mini/: __init__.py  config.py  constants.py  tokenization.py
src/llava_mini/data/: __init__.py  collator.py  dataset.py  schema.py
src/llava_mini/model/: __init__.py  llava_qwen.py  projector.py  vision_tower.py
src/llava_mini/train/: __init__.py  overfit_one_batch.py  train_full.py  train_projector.py
src/llava_mini/visualize/: __init__.py  sample_trace.py
src/llava_mini_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_collator.py  test_multimodal_splice.py  test_projector.py  test_sample_trace.py  test_schema.py  test_toy_data.py  test_training_smoke.py
